<resources>
    <string name="app_name">Android Engineer Exercise</string>

    <string name="tvWelcomeText">GreenFlag customers can create an account to access</string>
    <string name="tvWelcomeListItem1">Car health updates</string>
    <string name="tvWelcomeListItem2">Request a rescue online</string>
    <string name="tvWelcomeListItem3">Policy information</string>

    <string name="lblInputEmail">Email address</string>
    <string name="lblInputPassword1">Create password</string>
    <string name="lblInputPassword2">Repeat password</string>

    <string name="hintEmail">Enter your email</string>
    <string name="hintPassword1">Enter your password</string>
    <string name="hintPassword2">Re-enter your password</string>

    <string name="lblInputForename">Forename</string>
    <string name="lblInputSurname">Surname</string>
    <string name="lblInputUsername">Username</string>
    <string name="lblInputAge">Age</string>
    <string name="lblInputDOB">Date of Birth</string>
    <string name="lblInputCountry">Country</string>
    <string name="lblInputGender">Gender</string>
    <string name="lblInputAddress">Address</string>

    <string name="hintForename">Enter your first/forename</string>
    <string name="hintSurname">Enter your second/surname</string>
    <string name="hintUsername">Enter a unique username</string>
    <string name="hintAge">Enter your age</string>
    <string name="hintDOB">DD/MM/YYYY</string>
    <string name="hintCountry">Select your country</string>
    <string name="hintGender">What gender are you</string>
    <string name="hintAddress">Enter your address</string>

    <string name="passwordRules">
        Your password should have a minimum of 8 characters and contain at least one number,
        one uppercase letter and one lowercase letter. You can use special characters.
    </string>


    <string name="btnChangeProfilePicture">Change</string>
    <string name="btnNext">Next</string>
    <string name="btnNextCreateAccount">Create account</string>
    <string name="btnNextSignUp">Sign up</string>
    <string name="btnNextSaveDetails">Save details</string>
    <string name="btnNextSignIn">Sign in</string>


    <string name="titlePlaceholder">Activity Title</string>

    <string name="descProfilePicture">Your current profile picture.</string>
    <string name="descDatePicker">Calender Icon.</string>
    <string name="cdProfilePicture">Profile picture</string>
    <string name="tvWelcomeBack">Welcome back:</string>
    <string name="sign_me_in_automatically">Sign me in automatically</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
