<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/cdProfilePicture" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/forename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblInputForename"
        app:layout_constraintStart_toEndOf="@+id/profilePicture"
        app:layout_constraintTop_toTopOf="@+id/profilePicture" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblInputAge"
        app:layout_constraintBottom_toBottomOf="@+id/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dob"
        app:layout_constraintTop_toTopOf="@+id/dob" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblInputSurname"
        app:layout_constraintBottom_toBottomOf="@+id/forename"
        app:layout_constraintStart_toEndOf="@+id/forename"
        app:layout_constraintTop_toTopOf="@+id/forename" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblInputDOB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblInputUsername"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
        app:layout_constraintStart_toEndOf="@+id/profilePicture" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/lblInputGender"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/age" />

    <TextView
        style="@style/rvTextView"
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblInputCountry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <TextView
        android:id="@+id/address"
        style="@style/rvTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lblInputAddress"
        app:layout_constraintEnd_toEndOf="@+id/country"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTop_toBottomOf="@+id/country" />
</android.support.constraint.ConstraintLayout>