<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.connorglennon.androidengineerexercise.SignUpActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideLeftEdge"
        style="@style/guideVertical"
        app:layout_constraintGuide_percent="0.1"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideRightEdge"
        style="@style/guideVertical"
        app:layout_constraintGuide_percent="0.9"/>

    <fragment
        style="@style/fragmentTitleBar"
        android:id="@+id/fragmentTitleBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        style="@style/scrollView"
        app:layout_constraintLeft_toLeftOf="@+id/guideLeftEdge"
        app:layout_constraintRight_toRightOf="@+id/guideRightEdge"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTitleBar"
        app:layout_constraintBottom_toTopOf="@+id/btnNextSignIn">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/tvForm"
                android:id="@+id/lblInputEmail"
                android:text="@string/lblInputEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/etForm"
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/hintEmail"
                android:maxLength="320"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblInputEmail" />

            <TextView
                android:id="@+id/lblInputPassword1"
                style="@style/tvForm"
                android:text="@string/lblInputPassword1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <EditText
                android:id="@+id/inputPassword1"
                style="@style/etForm"
                android:hint="@string/hintPassword1"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnRevealPassword1"
                app:layout_constraintTop_toBottomOf="@+id/lblInputPassword1" />

            <ImageButton
                android:id="@+id/btnRevealPassword1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:srcCompat="@drawable/eye_off"
                android:onClick="handleOnClick"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPassword1"
                app:layout_constraintBottom_toBottomOf="@+id/inputPassword1"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_me_in_automatically"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        style="@style/btnNext"
        android:id="@+id/btnNextSignIn"
        android:text="@string/btnNextSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideRightEdge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideLeftEdge" />


</android.support.constraint.ConstraintLayout>
